--- a/views/p1.html
+++ b/views/p1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -15,27 +15,39 @@
     <![endif]-->
   </head>
   <body>
+
+
    <div class="container">
+
+	<div class="row">
+		<div class="col-sm-2 col-sm-offset-10">
+		  	<audio controls>
+				<source src="../test.mp3" type="audio/mpeg">
+			</audio>
+		</div>	
+	</div>
+
 
      <div class="row panel panel-default">
         <div class="panel-body">
           <p> 
-            Bon choix, j'aurai fait le même choix. Je t'offre un bonus, préviligies toujours la mayonnaise. <br/>
-            Combien fait le calcul 1000+40+1000+30+1000+20+1000+10 ?
+            Une première énigme pas trop difficile pour commencer :  
+            Un escargot essaie de sortir d'un trou de 5m de hauteur, il monte 50 cm par jour et redescend de 20 chaque nuit. Combien de temps mettret-til pour sortir ?
           </p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p22.html"> 4100 </a>
+          <a class="btn btn-default" href="p2.html"> 16 jours </a>
         </div>
-
         <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p58.html"> 5000 </a>
+          <a class="btn btn-default" href="p64.html"> 17 jours </a>
         </div>
       </div>
   </div>
+</body>
+<footer>
+</footer>
 
-  </body>
 </html>
