--- a/views/p35.html
+++ b/views/p35.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Escape game</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>  
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    Je ne souviens pas avoir cité quelqu'un dont le prénom commence par la lettre C.
-    Ce n'est pas bien grave, écoute bien : un chauffeur de bus commence sa tournée à vide, d'arrête une prmière fois et récupère 2 passagers, continuer puis d'arrête à nouveau, un assage monte et un autre descend. A l'arêt suivant, un passger monter et deux autres descendent. Au dernier arrêt 3 personnes montent. 
-    Combien le bus a-t-il fait d'arrêt ? 
-    <a href="p38.html"> 5 </a>
-    <a href="p40.html"> 6 </a>
+   <div class="container">
+
+     <div class="row panel panel-default">
+        <div class="panel-body">
+          <p> 
+            Je ne souviens pas avoir cité quelqu'un dont le prénom commence par la lettre C. <br/>
+            Ce n'est pas bien grave, écoute bien : un chauffeur de bus commence sa tournée à vide, d'arrête une prmière fois et récupère 2 passagers, continuer puis d'arrête à nouveau, un assage monte et un autre descend. A l'arêt suivant, un passger monter et deux autres descendent. Au dernier arrêt 3 personnes montent. <br/>
+            Combien le bus a-t-il fait d'arrêt ? 
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 col-md-offset-4">
+          <a class="btn btn-default" href="p38.html"> 5 </a>
+        </div>
+
+        <div class="col-md-1 col-md-offset-2">
+          <a class="btn btn-default" href="p40.html"> 6 </a>
+        </div>
+      </div>
+  </div>
+
   </body>
 </html>
