--- a/views/p4.html
+++ b/views/p4.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,22 +17,19 @@
   <body>
    <div class="container">
 
-     <div class="row panel panel-default">
+      <div class="row panel panel-default">
         <div class="panel-body">
-          <p> 
-            Bon choix, j'aurai fait le même choix. Je t'offre un bonus, préviligies toujours la mayonnaise. <br/>
-            Combien fait le calcul 1000+40+1000+30+1000+20+1000+10 ?
-          </p>
+          Combien d'arrêts y a-t-il sur cette ligne de bus ?
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p22.html"> 4100 </a>
+          <a class="btn btn-default" href="p5.html"> 5 </a>
         </div>
 
         <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p58.html"> 5000 </a>
+          <a class="btn btn-default" href="p58.html"> 4 </a>
         </div>
       </div>
   </div>
