--- a/views/p12.html
+++ b/views/p12.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Escape game</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>  
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    La matrice donne un indice pour la suite, mais tu peux faire sans, il faudra alors compter sur ta chance.
-    Veux tu continuer ou revenir en arrière ? 
-    <a href="p13.html"> continuer </a>
-    <a href="p18.html"> revenir en arrière </a>
+   <div class="container">
+
+     <div class="row panel panel-default">
+        <div class="panel-body">
+          <p> 
+            La matrice donne un indice pour la suite, mais tu peux faire sans, il faudra alors compter sur ta chance. <br/>
+            Veux tu continuer ou revenir en arrière ? 
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 col-md-offset-4">
+          <a class="btn btn-default" href="p18.html"> Revenir en arrière </a>
+        </div>
+
+        <div class="col-md-1 col-md-offset-2">
+          <a class="btn btn-default" href="p13.html"> Continuer </a>
+        </div>
+      </div>
+  </div>
+
   </body>
 </html>
