--- a/views/p16.html
+++ b/views/p16.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Escape game</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>  
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    Tu y étais presque, il fallais prendre la mayonnaise pour gagner. dommage mais bien joué quand même, si tu n'a fait aucune faute !
+   <div class="container">
+
+     <div class="row panel panel-default">
+        <div class="panel-body">
+          <p> 
+            Tu y étais presque, il fallais prendre la mayonnaise pour gagner. dommage mais bien joué quand même, si tu n'a fait aucune faute !
+          </p>
+        </div>
+      </div>
+
+      
+  </div>
+
   </body>
 </html>
