--- a/views/p2.html
+++ b/views/p2.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Escape game</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>  
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../public/css/style.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    Albert Einstein disait "la folie est de se comporter toujours de la même façon et attendre un résultat différent"
-    Si vous deviez chisoir entre ces deux maison, laquelle chiosiriez-vous ?
-    <a href="p63.html"> Gryffondor </a>
-    <a href="p3.html"> Serpentard </a>
+   <div class="container">
+
+     <div class="row panel panel-default">
+        <div class="panel-body">
+          <p> 
+            Bien joué ! L'aventure commence bien pour toi. <br/>
+            Un nénuphar recouvre actuellement 12.5% d'une piscine et double chaque jour, dans combien de jour la piscine sera-t-elle complètement recouverte ? 
+          </p>
+        </div>
+      </div>
+
+      <div class="panel panel-blanc-800">
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 col-md-offset-3">
+          <a class="btn btn-default" href="p63.html"> 8 jours </a>
+        </div>
+
+        <div class="col-md-1 col-md-offset-2">
+          <a class="btn btn-default" href="p3.html"> 3 jours </a>
+        </div>
+      </div>
+  </div>
+
   </body>
 </html>
