--- a/views/p3.html
+++ b/views/p3.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Escape game</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>  
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../public/css/style.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    Bon choix, j'aurai fait le même choix.
-    Je t'offre un bonus, préviligies toujours la mayonnaise.
-    Combien fait le calcul 1000+40+1000+30+1000+20+1000+10 ?
-    <a href="p5.html"> 4100 </a>
-    <a href="p58.html"> 5000 </a>
+   <div class="container">
+
+     <div class="row panel panel-default">
+        <div class="panel-body">
+          <p> 
+            Maintenent imagines que tu sois un chauffeur de bus. Initialement, ton bus est vide ; au premier arrêt de bus, 2 personnes montent. A l'arrêt suivant 3 personnes montent et une autre descend. Tu continues ta route et t'arrête à nouveau, 1 personne monte et 2 autres personnes dsecendent du bus. Au dernier arrêt avant le terminus, 2 personnes montent.
+          </p>
+        </div>
+      </div>
+
+      <div class=row">
+        <div class="col-sm-2 col-sm-offset-5">
+          <a class="btn btn-default" href="p4.html"> Clique ici pour voir la question </a>
+        </div>
+      </div>
+  </div>
+
   </body>
 </html>
