--- a/views/p51.html
+++ b/views/p51.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Escape game</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>  
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    Pas de matrice ici
-    <a href="p12.html"> Clique ici </a>
+   <div class="container">
+
+     <div class="row panel panel-default">
+        <div class="panel-body">
+          <p> 
+            Pas de matrice ici
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 col-md-offset-5">
+          <a class="btn btn-default" href="p12.html"> Clique ici </a>
+        </div>
+      </div>
+  </div>
+
   </body>
 </html>
