--- a/views/p9.html
+++ b/views/p9.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>Escape game</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>  
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../public/css/style.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    Léonard de vinci a dit : "savoir écouter c'est avoir outre le sien, le cerveau des autres"
-    Quelles sont les initiales des trois personnes citées depuis le début ?
-    <a href="p10.html"> LOA </a>
-    <a href="p52.html"> CAL </a>
+   <div class="container">
+
+      <div class="row panel panel-default">
+        <div class="panel-body">
+          <div class="blanc">
+            Solution : Rond
+          </div>
+          <p> 
+            Juste pour être sûr que ce n'est pas de la chance. 
+            Choisi entre ces deux formes : 
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 col-md-offset-4">
+          <a class="btn btn-default" href="p10.html"> Rond </a>
+        </div>
+
+        <div class="col-md-1 col-md-offset-2">
+          <a class="btn btn-default" href="p52.html"> Carré </a>
+        </div>
+      </div>
+  </div>
+
   </body>
 </html>
