ajout du labyrinthe + reorganisation des fichiers

--- a/views/p1.html
+++ b/views/p1.html
@@ -16,38 +16,31 @@
   </head>
   <body>
 
-
    <div class="container">
-
-	<div class="row">
-		<div class="col-sm-2 col-sm-offset-10">
-		  	<audio controls>
-				<source src="../test.mp3" type="audio/mpeg">
-			</audio>
-		</div>	
-	</div>
-
-
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <p> 
-            Une première énigme pas trop difficile pour commencer :  
-            Un escargot essaie de sortir d'un trou de 5m de hauteur, il monte 50 cm par jour et redescend de 20 chaque nuit. Combien de temps mettret-til pour sortir ?
-          </p>
-        </div>
-      </div>
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+                Une première énigme pas trop difficile pour commencer :  
+                Un escargot essaie de sortir d'un trou de 5m de hauteur, il monte 50 cm par jour et redescend de 20 chaque nuit. Combien de temps mettret-til pour sortir ?
+              </p>
+            </div>
+          </div>
 
-      <div class="row">
-        <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p2.html"> 16 jours </a>
+          <div class="row">
+            <div class="col-md-1 col-md-offset-4">
+              <a class="btn btn-default" href="p2.html"> 16 jours </a>
+            </div>
+            <div class="col-md-1 col-md-offset-2">
+              <a class="btn btn-default" href="p4.html"> 17 jours </a>
+            </div>
+           </div>
         </div>
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p64.html"> 17 jours </a>
-        </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_1.png">
+       </div>
+     </div>
   </div>
 </body>
-<footer>
-</footer>
-
 </html>
