--- a/views/p10.html
+++ b/views/p10.html
@@ -15,26 +15,35 @@
     <![endif]-->
   </head>
   <body>
+
    <div class="container">
-
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <p> 
-            Ca fait un momenent déjà que tu fais marcher ta rélfexion, je te propose de reprendre quelques forces, tu préfères un fruit ou une barre chocolatée ? 
-          </p>
-        </div>
-      </div>
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <div class="blanc">
+                Solution : Chien
+              </div>
+              <p> 
+                Est-ce que tu es arrivé là par harsard ou as-tu compris ?
+                Choisi entre ces deux animaux : 
+              </p>
+            </div>
+          </div>
 
-      <div class="row">
-        <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p11.html"> Fruit </a>
+          <div class="row">
+            <div class="col-md-1 col-md-offset-4">
+              <a class="btn btn-default" href="p11.html"> Chat </a>
+            </div>
+            <div class="col-md-1 col-md-offset-2">
+              <a class="btn btn-default" href="p16.html"> Chien </a>
+            </div>
+           </div>
         </div>
-
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p51.html"> Barre </a>
-        </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_10.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
