--- a/views/p13.html
+++ b/views/p13.html
@@ -22,22 +22,22 @@
          <div class="row">
             <div class="panel-body">
               <p> 
-                pas implémenté
+                Ca fait un momenent déjà que tu fais marcher ta rélfexion, je te propose de reprendre quelques forces, tu préfères un fruit ou une barre chocolatée ? 
               </p>
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-1 col-md-offset-4">
-              <a class="btn btn-default" href="p10.html"> x </a>
+              <a class="btn btn-default" href="p15.html"> Fruit </a>
             </div>
             <div class="col-md-1 col-md-offset-2">
-              <a class="btn btn-default" href="p14.html"> y </a>
+              <a class="btn btn-default" href="p14.html"> Barre </a>
             </div>
            </div>
         </div>
        <div class="col-md-2">
-         <img src="../assets/img/labyrinthe_11.png">
+         <img src="../assets/img/labyrinthe_13.png">
        </div>
      </div>
   </div>
