--- a/views/p15.html
+++ b/views/p15.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -15,27 +15,23 @@
     <![endif]-->
   </head>
   <body>
+
    <div class="container">
-
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <p> 
-            Albert Einstein disait "la folie est de se comporter toujours de la même façon et attendre un résultat différent" <br/>
-            Si vous deviez chisoir entre ces deux maison, laquelle chiosiriez-vous ? 
-          </p>
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+               Bravo, tu es sorti du labyrinthe.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p65.html"> Gryffondor </a>
-        </div>
-
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p70.html"> Serpentard </a>
-        </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_15.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
+
