--- a/views/p16.html
+++ b/views/p16.html
@@ -21,23 +21,27 @@
        <div class="col-md-10">
          <div class="row">
             <div class="panel-body">
+             <div class="blanc">
+                Solution : Rond
+              </div>
               <p> 
-                pas implémenté
+                Juste pour être sûr que ce n'est pas de la chance. 
+                Choisi entre ces deux formes : 
               </p>
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-1 col-md-offset-4">
-              <a class="btn btn-default" href="p10.html"> x </a>
+              <a class="btn btn-default" href="p13.html"> Rond </a>
             </div>
             <div class="col-md-1 col-md-offset-2">
-              <a class="btn btn-default" href="p14.html"> y </a>
+              <a class="btn btn-default" href="p12.html"> Carré </a>
             </div>
            </div>
         </div>
        <div class="col-md-2">
-         <img src="../assets/img/labyrinthe_11.png">
+         <img src="../assets/img/labyrinthe_16.png">
        </div>
      </div>
   </div>
