--- a/views/p2.html
+++ b/views/p2.html
@@ -15,30 +15,28 @@
     <![endif]-->
   </head>
   <body>
+
    <div class="container">
-
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <p> 
-            Bien joué ! L'aventure commence bien pour toi. <br/>
-            Un nénuphar recouvre actuellement 12.5% d'une piscine et double chaque jour, dans combien de jour la piscine sera-t-elle complètement recouverte ? 
-          </p>
-        </div>
-      </div>
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+                Maintenent imagines que tu sois un chauffeur de bus. Initialement, ton bus est vide ; au premier arrêt de bus, 2 personnes montent. A l'arrêt suivant 3 personnes montent et une autre descend. Tu continues ta route et t'arrête à nouveau, 1 personne monte et 2 autres personnes dsecendent du bus. Au dernier arrêt avant le terminus, 2 personnes montent.
+              </p>
+            </div>
+          </div>
 
-      <div class="panel panel-blanc-800">
-      </div>
-
-      <div class="row">
-        <div class="col-md-1 col-md-offset-3">
-          <a class="btn btn-default" href="p63.html"> 8 jours </a>
+          <div class="row">
+            <div class="col-sm-2 col-sm-offset-5">
+              <a class="btn btn-default" href="p3.html"> Clique ici pour voir la question </a>
+            </div>
+           </div>
         </div>
-
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p3.html"> 3 jours </a>
-        </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_2.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
