--- a/views/p3.html
+++ b/views/p3.html
@@ -15,22 +15,31 @@
     <![endif]-->
   </head>
   <body>
-   <div class="container">
-
+     <div class="container">
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <p> 
-            Maintenent imagines que tu sois un chauffeur de bus. Initialement, ton bus est vide ; au premier arrêt de bus, 2 personnes montent. A l'arrêt suivant 3 personnes montent et une autre descend. Tu continues ta route et t'arrête à nouveau, 1 personne monte et 2 autres personnes dsecendent du bus. Au dernier arrêt avant le terminus, 2 personnes montent.
-          </p>
-        </div>
-      </div>
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+                Combien d'arrêts y a-t-il sur cette ligne de bus ?
+              </p>
+            </div>
+          </div>
 
-      <div class=row">
-        <div class="col-sm-2 col-sm-offset-5">
-          <a class="btn btn-default" href="p4.html"> Clique ici pour voir la question </a>
+           <div class="row">
+        <div class="col-md-1 col-md-offset-4">
+          <a class="btn btn-default" href="p7.html"> 5 </a>
+        </div>
+
+        <div class="col-md-1 col-md-offset-2">
+          <a class="btn btn-default" href="p5.html"> 4 </a>
         </div>
       </div>
+        </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_2.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
