--- a/views/p5.html
+++ b/views/p5.html
@@ -15,30 +15,31 @@
     <![endif]-->
   </head>
   <body>
+
    <div class="container">
-
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <div class="blanc">
-            Solution : Bleu
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+                pas implémenté
+              </p>
+            </div>
           </div>
-          <p> 
-            Tu t'en sors plutôt pas mal pour l'instant, on va voir si tu trouves la solution de celle-ci. 
-            Choisi entre ces deux couleur : 
-          </p>
-        </div>
-      </div>
-      
-      <div class="row">
-        <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p42.html"> Rouge </a>
-        </div>
 
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p7.html"> Bleu </a>
+          <div class="row">
+            <div class="col-md-1 col-md-offset-4">
+              <a class="btn btn-default" href="p6.html"> x </a>
+            </div>
+            <div class="col-md-1 col-md-offset-2">
+              <a class="btn btn-default" href="p1.html"> y </a>
+            </div>
+           </div>
         </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_4.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
