--- a/views/p7.html
+++ b/views/p7.html
@@ -15,30 +15,30 @@
     <![endif]-->
   </head>
   <body>
+
    <div class="container">
-
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <div class="blanc">
-            Solution : Chien
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+              </p>
+            </div>
           </div>
-          <p> 
-            Est-ce que tu es arrivé là par harsard ou as-tu compris ?
-            Choisi entre ces deux animaux : 
-          </p>
-        </div>
-      </div>
-      
-      <div class="row">
-        <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p9.html"> Chien </a>
-        </div>
 
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="537.html"> Chat </a>
+          <div class="row">
+            <div class="col-md-1 col-md-offset-4">
+              <a class="btn btn-default" href="p8.html"> En face </a>
+            </div>
+            <div class="col-md-1 col-md-offset-2">
+              <a class="btn btn-default" href="p9.html"> A gauche </a>
+            </div>
+           </div>
         </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_7.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
