--- a/views/p9.html
+++ b/views/p9.html
@@ -15,30 +15,31 @@
     <![endif]-->
   </head>
   <body>
+
    <div class="container">
-
-      <div class="row panel panel-default">
-        <div class="panel-body">
-          <div class="blanc">
-            Solution : Rond
+     <div class="row panel panel-default">
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+                pas implémenté
+              </p>
+            </div>
           </div>
-          <p> 
-            Juste pour être sûr que ce n'est pas de la chance. 
-            Choisi entre ces deux formes : 
-          </p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p10.html"> Rond </a>
+          <div class="row">
+            <div class="col-md-1 col-md-offset-4">
+              <a class="btn btn-default" href="p7.html"> x </a>
+            </div>
+            <div class="col-md-1 col-md-offset-2">
+              <a class="btn btn-default" href="p6.html"> y </a>
+            </div>
+           </div>
         </div>
-
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p52.html"> Carré </a>
-        </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_9.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
