--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background: url('../../assets/img/fond3.png') no-repeat center center fixed;
+	background: url('../../assets/img/fond.png') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
