--- a/views/p6.html
+++ b/views/p6.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../bootstrap/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -15,27 +15,31 @@
     <![endif]-->
   </head>
   <body>
+
    <div class="container">
-
      <div class="row panel panel-default">
-        <div class="panel-body">
-          <p> 
-            Oscard Wilde a dit : "le chemimn des paradoxes est le chemin du vrai ... corde raide". <br/>
-            Deux philosophes discutent : Platon dit "ce que dit Aristote est vrai", Aristote dit 'ce que dit Platon est faux" Qui a raison ?
-          </p>
-        </div>
-      </div>
+       <div class="col-md-10">
+         <div class="row">
+            <div class="panel-body">
+              <p> 
+                pas implémenté
+              </p>
+            </div>
+          </div>
 
-      <div class="row">
-        <div class="col-md-1 col-md-offset-4">
-          <a class="btn btn-default" href="p46.html"> Les deux </a>
+          <div class="row">
+            <div class="col-md-1 col-md-offset-4">
+              <a class="btn btn-default" href="p12.html"> x </a>
+            </div>
+            <div class="col-md-1 col-md-offset-2">
+              <a class="btn btn-default" href="p5.html"> y </a>
+            </div>
+           </div>
         </div>
-
-        <div class="col-md-1 col-md-offset-2">
-          <a class="btn btn-default" href="p46.html"> Aucun des deux </a>
-        </div>
-      </div>
+       <div class="col-md-2">
+         <img src="../assets/img/labyrinthe_6.png">
+       </div>
+     </div>
   </div>
-
-  </body>
+</body>
 </html>
