--- a/views/p12.html
+++ b/views/p12.html
@@ -22,17 +22,17 @@
          <div class="row">
             <div class="panel-body">
               <p> 
-                pas implémenté
+                Qui de l'oeuf ou la poule est arrivé en premier ? 
               </p>
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-1 col-md-offset-4">
-              <a class="btn btn-default" href="p6.html"> x </a>
+              <a class="btn btn-default" href="p6.html"> L'oeuf </a>
             </div>
             <div class="col-md-1 col-md-offset-2">
-              <a class="btn btn-default" href="p6.html"> y </a>
+              <a class="btn btn-default" href="p6.html"> La poule </a>
             </div>
            </div>
         </div>
