--- a/views/p14.html
+++ b/views/p14.html
@@ -22,17 +22,17 @@
          <div class="row">
             <div class="panel-body">
               <p> 
-                pas implémenté
+                Le barbier (masculin) d'un village doit raser tous les habitants masculins du village qui ne se rasent pas eux-mêmes et seulement ceux-ci. Laquelle deux proposition est correcte ?
               </p>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-1 col-md-offset-4">
-              <a class="btn btn-default" href="p11.html"> x </a>
+            <div class="col-md-3 col-md-offset-2">
+              <a class="btn btn-default" href="p11.html"> Le barbier se rase lui-même </a>
             </div>
-            <div class="col-md-1 col-md-offset-2">
-              <a class="btn btn-default" href="p11.html"> y </a>
+            <div class="col-md-3 col-md-offset-2">
+              <a class="btn btn-default" href="p11.html"> Le barbier ne se rase pas </a>
             </div>
            </div>
         </div>
