--- a/views/p7.html
+++ b/views/p7.html
@@ -31,7 +31,7 @@
               <a class="btn btn-default" href="p8.html"> En face </a>
             </div>
             <div class="col-md-1 col-md-offset-2">
-              <a class="btn btn-default" href="p9.html"> A gauche </a>
+              <a class="btn btn-default" href="p9.html"> A droite </a>
             </div>
            </div>
         </div>
