--- a/views/p4.html
+++ b/views/p4.html
@@ -22,17 +22,18 @@
          <div class="row">
             <div class="panel-body">
               <p> 
-                pas implémenté
+                Je te donne une deuxième chance : 
+                10 poules produisent 10 oeufs en 10 jours, combien d'oeufs produisent 20 poules en 20 jours ?
               </p>
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-1 col-md-offset-4">
-              <a class="btn btn-default" href="p2.html"> x </a>
+              <a class="btn btn-default" href="p2.html"> 40 jours </a>
             </div>
             <div class="col-md-1 col-md-offset-2">
-              <a class="btn btn-default" href="p6.html"> y </a>
+              <a class="btn btn-default" href="p6.html"> 20 jours </a>
             </div>
            </div>
         </div>
