--- a/views/p9.html
+++ b/views/p9.html
@@ -18,26 +18,23 @@
 
    <div class="container">
      <div class="row panel panel-default">
-       <div class="col-md-10">
-         <div class="row">
-            <div class="panel-body">
-              <p> 
-                pas implémenté
-              </p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-1 col-md-offset-4">
-              <a class="btn btn-default" href="p7.html"> x </a>
-            </div>
-            <div class="col-md-1 col-md-offset-2">
-              <a class="btn btn-default" href="p6.html"> y </a>
-            </div>
-           </div>
-        </div>
-       <div class="col-md-2">
+       <div class="col-md-offset-2 col-md-7">
+         <div class="panel-body">
+           <p> 
+             Je n'ai pas pu tourner à droite, donc je suis parti à gauche.
+           </p>
+         </div>
+       </div>
+       <div clas="col-md-2">
          <img src="../assets/img/labyrinthe_9.png">
+       </div>
+     </div>
+
+     <div class="row panel-blanc-800"> </div>
+
+     <div class="row panel panel-default">
+       <div class="col-md-2 col-md-offset-5">
+         <a class="btn btn-default" href="p6.html"> y </a>
        </div>
      </div>
   </div>
